# weather_alerts

./: Cargo.toml  PROXY_SETUP.md  README.md
src/: app.rs  config.rs  lib.rs  main.rs  weather.rs  weather_type.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/public/: index.html
src-tauri/src/: main.rs
weather-proxy-server/: Cargo.toml  README.md
weather-proxy-server/src/: main.rs
