[package]
name = "weather_alerts"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
egui = "0.22"
eframe = "0.22"